# ai-engineering

./: README.md  main.py  pyproject.toml
deep-research/: agents.py
deep-research/prompts/: __init__.py  research_lead_agent.py  research_subagent.py
