[project]
name = "agentic-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "audioop-lts>=0.2.1",
    "bs4>=0.0.2",
    "lilypad-sdk[anthropic,google,openai]>=0.10.1",
    "logfire[aiohttp-client]>=3.25.0",
    "mirascope[openai]>=1.25.4",
    "pydantic-ai[logfire]>=0.3.4",
    "pydub>=0.25.1",
]
